# UEA

./: README.md
Year_1/: README.md
Year_1/Assignment 1/Product/: about.html  rooms.html  services.html
Year_1/Assignment 1/Product/Assets/: pot.jfif
Year_1/Assignment 1/Product/JS/: contact.js
Year_1/Assignmnet 2/src/com/Greedy/: AgeRestrictionException.java  Customer.java
Year_1/Database Systems/DB Assignment Callum Clegg/: OffLineDemo.docx
Year_1/Database Systems/DB Assignment Callum Clegg/CODE/: DDL.txt  DML.txt  RawCode.txt  SQL (My Data).txt
Year_1/Programming 1/: README.md
Year_1/Programming 1/Assignment 1/Electronic Component Inventory Program/: inventory.txt
Year_1/Programming 1/Assignment 1/Electronic Component Inventory Program/src/com/CMP_4008Y/: Inventory.java  (+2 more)
Year_1/Programming 1/Assignment 2/src/com/Greedy/: Attraction.java  GentleAttraction.java  InsufficientBalanceException.java  Pleasure_Point.java  RollerCoaster.java  Simulate.java  TransportAttraction.java
Year_1/Web-Based Programming/: README.md
Year_1/Web-Based Programming/Assignment 1/: Loch Inn Project.docx
Year_1/Web-Based Programming/Assignment 1/Product/: contact.html  index.html
Year_1/Web-Based Programming/Assignment 1/Product/Assets/: puffin.jfif  room.jfif
Year_1/Web-Based Programming/Assignment 1/Product/CSS/: about.css  contact.css  rooms.css  services.css  style.css
Year_1/Web-Based Programming/Assignment 1/Product/JS/: index.js
Year_2/: CMakeLists.txt  main.c
Year_2/C_LABS/: inputs_and_outputs.c  inputs_and_outputs.h  lut.txt  structs_adt.c
